// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchPage render function displays search results 1`] = `
<div
  className="col-11 col-centered text-left"
>
  <SearchField
    onSearch={[Function]}
    searching={false}
    style={
      Object {
        "marginBottom": 30,
        "marginTop": 40,
      }
    }
  />
  <div>
    <p>
      Søgning efter "
      søgeforespørgsel
      " returnerede
       
      1
       resultater.
    </p>
    <ul>
      <li>
        <a
          href="/værk/123:samplepid-456"
        >
          Titel
           - 
          Forfatter
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`SearchPage render function gives a message, when no search results are present 1`] = `
<div
  className="col-11 col-centered text-left"
>
  <SearchField
    onSearch={[Function]}
    searching={false}
    style={
      Object {
        "marginBottom": 30,
        "marginTop": 40,
      }
    }
  />
  <div>
    Intet søgeresultat endnu.
  </div>
</div>
`;
